# OctoPrint-PiSupport

./: .editorconfig  .eslintrc.yaml  .gitignore  .pre-commit-config.yaml  .prettierignore  MANIFEST.in  README.md  Taskfile.yml  black.toml  pyproject.toml  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml  issue_automation.yml
octoprint_pi_support/: __init__.py  health_checks.py
octoprint_pi_support/static/js/: pi_support.js
octoprint_pi_support/templates/: pi_support_about_octopi.jinja2  pi_support_about_octopiuptodate.jinja2  pi_support_settings.jinja2
octoprint_pi_support/translations/de/LC_MESSAGES/: messages.mo  messages.po
tests/: test_pi_support.py
tests/fakes/: fake_camerastack_journal.txt  fake_camerastack_libcamera.txt  fake_camerastack_usb.txt  fake_octopiuptodate.txt
translations/: README.txt  messages.pot
translations/de/LC_MESSAGES/: messages.mo  messages.po
